--- a/templates/video.html.twig
+++ b/templates/video.html.twig
@@ -1,4 +1,35 @@
-<h1>Template for a video</h1>
+{% extends "base.html.twig" %}
+
+{% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+	<link rel="stylesheet" href="/static/plyr/plyr.css">
+{% endblock %}
+
+
+{% block title %}Welcome{% endblock %}
+{% block body %}
+    <h1>{{ videodata.name }}</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <video class="video-player" id="player" controls>
+                    <source src="/videofiles/{{ videodata.file }}" type="video/mp4" />
+                </video>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+    </div>
+
+{% block javascripts %}
+	<script src="/static/plyr/plyr.js"></script>
+{% endblock %}
+
+{% endblock %}
+
+
+
 
 {# 
    here you can use the Twig variable 'videodata' that gets passed from the controller. 
