--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Welcome{% endblock %}
 {% block body %}
     <h1>These are our latest videos</h1>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
         <div class="col-sm-2"></div>
             <div class="col-sm-8">
