--- a/templates/video.html.twig
+++ b/templates/video.html.twig
@@ -8,7 +8,7 @@
 {% block title %}Welcome{% endblock %}
 {% block body %}
     <h1>{{ videodata.name }}</h1>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
